@@ -1,31 +1,35 @@
 package cn.managame.jpa.async;
 
 import cn.managame.jpa.core.exception.ConfigurationException;
+import cn.managame.jpa.core.exception.ConcurrentWriteException;
+import cn.managame.jpa.core.exception.DataTooLargeException;
 import cn.managame.jpa.core.exception.RetriableWriteException;
 import cn.managame.jpa.core.metrics.MetricsCollector;
 import cn.managame.jpa.core.write.WriteTask;
 
 import java.io.Closeable;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.Semaphore;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * 共享异步刷盘调度器。
- *
- * <p>单线程定时器周期性 {@link AsyncWriteQueue#drainAll} 摘取各物理表缓冲对象、按 maxBatchSize 切片，
- * 把每个 {@link FlushUnit} 派发到 worker 执行落库。worker 线程模型默认虚拟线程、可选有界平台池
- * （见 {@link FlushThreadMode}）。整批失败降级为单条写入并按失败类型分流（瞬时错误重试、确定性失败丢弃）。
+ * 周期性异步刷盘协调器。
+ * <p>
+ * worker 数始终有界；同一物理表的 SAVE/DELETE 分片在一个 worker 内顺序执行，不同物理表并行。
+ * 批次级瞬时错误整批回灌，数据级错误二分定位，避免批量失败直接放大成 N 次单写。
  */
 public class FlushScheduler implements Closeable {
 
@@ -39,9 +43,8 @@ public class FlushScheduler implements Closeable {
     private final long batchTimeoutMillis;
     private final MetricsCollector metrics;
     private final ScheduledExecutorService scheduler;
-    private final ExecutorService worker;
-    /** 限制单轮刷盘并发执行的单元数，null 表示不限（VIRTUAL 模式下可给阻塞落库封顶并发，避免压垮连接池）。 */
-    private final Semaphore concurrencyLimiter;
+    private final ExecutorService workers;
+    private final ReentrantLock flushLock = new ReentrantLock();
 
     private volatile Consumer<WriteTask> failureHandler = task ->
             log.error("[{}] Task permanently failed: op={}, id={}", task.entityName(), task.op(), task.id());
@@ -74,8 +77,8 @@ public class FlushScheduler implements Closeable {
     }
 
     /**
-     * @param maxConcurrency 单轮并发执行的刷盘单元上限，{@code <= 0} 表示不限。VIRTUAL 模式下用它给
-     *                       阻塞 JDBC/Mongo 落库封顶并发，避免一次刷盘 fan-out 出过多 vthread 压垮连接池。
+     * {@code maxConcurrency > 0} 时覆盖 {@code threadCount}；两者都未配置时使用 CPU 数量。
+     * 线程类型只决定 worker 的 ThreadFactory，不再改变是否有界。
      */
     public FlushScheduler(AsyncWriteQueue queue, long intervalMillis, int maxRetries,
             FlushThreadMode threadMode, int threadCount, MetricsCollector metrics, int maxBatchSize,
@@ -94,29 +97,32 @@ public class FlushScheduler implements Closeable {
         this.maxBatchSize = maxBatchSize > 0 ? maxBatchSize : Integer.MAX_VALUE;
         this.batchTimeoutMillis = batchTimeoutMillis;
         this.metrics = metrics != null ? metrics : MetricsCollector.NOOP;
-        this.concurrencyLimiter = maxConcurrency > 0 ? new Semaphore(maxConcurrency) : null;
 
+        int concurrency = maxConcurrency > 0
+                ? maxConcurrency
+                : threadCount > 0 ? threadCount : Math.max(2, Runtime.getRuntime().availableProcessors());
+        this.workers = createWorkers(threadMode != null ? threadMode : FlushThreadMode.VIRTUAL, concurrency);
         this.scheduler = Executors.newSingleThreadScheduledExecutor(r -> {
-            Thread t = new Thread(r, "game-jpa-schedule");
-            t.setDaemon(true);
-            return t;
+            Thread thread = new Thread(r, "game-jpa-schedule");
+            thread.setDaemon(true);
+            return thread;
         });
-        this.worker = createWorker(threadMode != null ? threadMode : FlushThreadMode.VIRTUAL, threadCount);
-
-        this.scheduler.scheduleWithFixedDelay(this::doFlush, intervalMillis, intervalMillis, TimeUnit.MILLISECONDS);
+        this.scheduler.scheduleWithFixedDelay(this::doFlush,
+                intervalMillis, intervalMillis, TimeUnit.MILLISECONDS);
     }
 
-    private static ExecutorService createWorker(FlushThreadMode mode, int threadCount) {
+    private static ExecutorService createWorkers(FlushThreadMode mode, int concurrency) {
+        ThreadFactory factory;
         if (mode == FlushThreadMode.VIRTUAL) {
-            ThreadFactory factory = Thread.ofVirtual().name("game-jpa-flush-", 0).factory();
-            return Executors.newThreadPerTaskExecutor(factory);
+            factory = Thread.ofVirtual().name("game-jpa-flush-", 0).factory();
+        } else {
+            factory = runnable -> {
+                Thread thread = new Thread(runnable, "game-jpa-flush");
+                thread.setDaemon(true);
+                return thread;
+            };
         }
-        int nThreads = threadCount > 0 ? threadCount : Math.max(2, Runtime.getRuntime().availableProcessors());
-        return Executors.newFixedThreadPool(nThreads, r -> {
-            Thread t = new Thread(r, "game-jpa-flush");
-            t.setDaemon(true);
-            return t;
-        });
+        return Executors.newFixedThreadPool(concurrency, factory);
     }
 
     public FlushScheduler onFailure(Consumer<WriteTask> handler) {
@@ -125,145 +131,188 @@ public class FlushScheduler implements Closeable {
     }
 
     private void doFlush() {
-        long flushStart = System.currentTimeMillis();
+        if (!flushLock.tryLock()) {
+            return;
+        }
+        long startedAt = System.currentTimeMillis();
         try {
-            List<FlushUnit> units = queue.drainAll(maxBatchSize);
-            if (units.isEmpty()) {
+            List<TableBuffer.Drain> drains = queue.drainReady();
+            if (drains.isEmpty()) {
                 return;
             }
-            int taskCount = 0;
-            for (FlushUnit unit : units) {
-                taskCount += unit.size();
-            }
-            runUnits(units, taskCount);
+            int taskCount = drains.stream().mapToInt(TableBuffer.Drain::size).sum();
+            runDrains(drains, taskCount);
             metrics.recordCount("asyncWrite.flush.tasks", "scheduler", taskCount);
             metrics.recordLatency("asyncWrite.flush.latency", "scheduler",
-                    System.currentTimeMillis() - flushStart);
+                    System.currentTimeMillis() - startedAt);
         } catch (Exception e) {
             log.error("Unexpected error in async flush", e);
             metrics.recordError("asyncWrite.flush", "scheduler", e);
+        } finally {
+            flushLock.unlock();
         }
     }
 
-    /**
-     * 把各刷盘单元派发到 worker 并等待全部完成或超时。沿用 {@link CountDownLatch} 做 fan-out/join：
-     * 单元无返回值、单元体已自吞失败，无需引入 CompletableFuture。
-     */
-    private void runUnits(List<FlushUnit> units, int taskCount) {
-        CountDownLatch latch = new CountDownLatch(units.size());
-        for (FlushUnit unit : units) {
-            worker.execute(() -> {
-                boolean acquired = false;
-                try {
-                    if (concurrencyLimiter != null) {
-                        concurrencyLimiter.acquire();
-                        acquired = true;
-                    }
-                    executeUnit(unit);
-                } catch (InterruptedException ie) {
-                    Thread.currentThread().interrupt();
-                } catch (RuntimeException | Error e) {
-                    log.error("Unexpected error executing async flush unit", e);
-                } finally {
-                    if (acquired) {
-                        concurrencyLimiter.release();
-                    }
-                    latch.countDown();
-                }
-            });
-        }
-        try {
-            if (!latch.await(batchTimeoutMillis, TimeUnit.MILLISECONDS)) {
-                log.warn("Async flush timed out after {} ms while waiting for {} task(s)",
-                        batchTimeoutMillis, taskCount);
-                metrics.recordError("asyncWrite.flush.timeout", "scheduler",
-                        new TimeoutException("Async flush timed out after " + batchTimeoutMillis + " ms"));
-            }
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            throw new IllegalStateException("Interrupted while waiting for async flush units", e);
-        }
-    }
-
-    private void executeUnit(FlushUnit unit) {
-        List<WriteTask> tasks = unit.tasks();
-        try {
-            unit.flush(tasks);
-            // 成功：任务已在 drain 时脱离缓冲，无需确认。
-        } catch (Exception batchEx) {
-            String entity = tasks.isEmpty() ? "unknown" : tasks.get(0).entityName();
-            log.warn("[{}] Batch flush failed ({} tasks), falling back to single writes",
-                    entity, tasks.size(), batchEx);
-            metrics.recordError("asyncWrite.batch", entity, batchEx);
-            for (WriteTask task : tasks) {
-                try {
-                    unit.flush(List.of(task));
-                } catch (Exception singleEx) {
-                    handleSingleFailure(unit.buffer(), task, singleEx);
-                }
+    private void runDrains(List<TableBuffer.Drain> drains, int taskCount) {
+        List<Future<?>> futures = new ArrayList<>(drains.size());
+        for (TableBuffer.Drain drain : drains) {
+            try {
+                futures.add(workers.submit(() -> executeDrain(drain)));
+            } catch (RejectedExecutionException e) {
+                queue.restore(drain);
+                log.error("Flush worker rejected physical target {}", drain.buffer().destination, e);
             }
         }
-    }
 
-    /**
-     * 单条写失败分流：异常链中包含 {@link RetriableWriteException}（网络、可重新执行的并发冲突、
-     * 写超时或数据过大）时重试到 maxRetries；重复键、类型错误和乐观锁版本冲突等确定性失败
-     * 直接通知失败处理器并丢弃。
-     */
-    private void handleSingleFailure(TableBuffer buffer, WriteTask task, Exception ex) {
-        String entity = task.entityName();
-        if (isConfiguration(ex)) {
-            // 配置错误（如数据源/物理表未注册）：单独 ERROR + 计量，不与数据错误混在 warn 静默丢弃。
-            log.error("[{}] 配置错误，写入被丢弃，请检查数据源/路由/物理表配置: op={}, id={}",
-                    entity, task.op(), task.id(), ex);
-            notifyFailureHandler(task);
-            metrics.recordCount("asyncWrite.misconfiguration", entity, 1);
-            return;
-        }
-        if (isRetriable(ex)) {
-            task.incrementRetry();
-            if (task.retryCount() < maxRetries) {
-                metrics.recordCount("asyncWrite.retry", entity, 1);
-                queue.reSubmit(buffer, task);
+        long deadline = System.nanoTime() + TimeUnit.MILLISECONDS.toNanos(batchTimeoutMillis);
+        for (Future<?> future : futures) {
+            long remaining = deadline - System.nanoTime();
+            if (remaining <= 0) {
+                recordTimeout(taskCount);
                 return;
             }
-            log.warn("[{}] Retriable task still failing after {} retries, dropping: op={}, id={}",
-                    entity, maxRetries, task.op(), task.id(), ex);
-        } else {
-            log.warn("[{}] Non-retriable write failure, dropping: op={}, id={}",
-                    entity, task.op(), task.id(), ex);
-        }
-        notifyFailureHandler(task);
-        metrics.recordCount("asyncWrite.permanentFailure", entity, 1);
-        // 不 reSubmit = 丢弃。
-    }
-
-    private static boolean isRetriable(Throwable ex) {
-        for (Throwable t = ex; t != null; t = t.getCause()) {
-            if (t instanceof RetriableWriteException) {
-                return true;
+            try {
+                future.get(remaining, TimeUnit.NANOSECONDS);
+            } catch (TimeoutException e) {
+                // 不取消结果未知的数据库调用；TableBuffer.inFlight 会阻止同表下一批并发执行。
+                recordTimeout(taskCount);
+                return;
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                throw new IllegalStateException("Interrupted while waiting for async flush", e);
+            } catch (ExecutionException e) {
+                log.error("Unexpected error executing async physical-table drain", e.getCause());
             }
         }
-        return false;
     }
 
-    private static boolean isConfiguration(Throwable ex) {
-        for (Throwable t = ex; t != null; t = t.getCause()) {
-            if (t instanceof ConfigurationException) {
-                return true;
+    private void recordTimeout(int taskCount) {
+        log.warn("Async flush timed out after {} ms while waiting for {} task(s)",
+                batchTimeoutMillis, taskCount);
+        metrics.recordError("asyncWrite.flush.timeout", "scheduler",
+                new TimeoutException("Async flush timed out after " + batchTimeoutMillis + " ms"));
+    }
+
+    private void executeDrain(TableBuffer.Drain drain) {
+        try {
+            flushGroup(drain.buffer(), WriteTask.Op.SAVE, drain.saves());
+            flushGroup(drain.buffer(), WriteTask.Op.DELETE, drain.deletes());
+        } finally {
+            queue.finish(drain.buffer());
+        }
+    }
+
+    private void flushGroup(TableBuffer buffer, WriteTask.Op op, List<WriteTask> tasks) {
+        for (int start = 0; start < tasks.size(); start += maxBatchSize) {
+            int end = Math.min(start + maxBatchSize, tasks.size());
+            flushRange(buffer, op, tasks, start, end);
+        }
+    }
+
+    private void flushRange(TableBuffer buffer, WriteTask.Op op,
+            List<WriteTask> tasks, int from, int to) {
+        List<WriteTask> batch = tasks.subList(from, to);
+        try {
+            buffer.flush(op, batch);
+            queue.complete(batch.size());
+        } catch (Exception failure) {
+            String entity = batch.isEmpty() ? "unknown" : batch.getFirst().entityName();
+            metrics.recordError("asyncWrite.batch", entity, failure);
+
+            if (contains(failure, ConfigurationException.class)) {
+                failRange(batch, failure, true);
+                return;
+            }
+            if (contains(failure, DataTooLargeException.class) && batch.size() > 1) {
+                if (buffer.replaySafe() || buffer.atomicBatch()) {
+                    splitAndFlush(buffer, op, tasks, from, to);
+                } else {
+                    failRange(batch, failure, false);
+                }
+                return;
+            }
+            if (contains(failure, RetriableWriteException.class)) {
+                if (buffer.replaySafe()
+                        || (buffer.atomicBatch() && contains(failure, ConcurrentWriteException.class))
+                        || (buffer.atomicBatch() && contains(failure, DataTooLargeException.class))) {
+                    retryRange(buffer, batch, failure);
+                } else {
+                    // append-only 的 commit 结果可能未知，连接/超时异常不能盲目重放。
+                    failRange(batch, failure, false);
+                }
+                return;
+            }
+            if (batch.size() > 1) {
+                if (buffer.replaySafe() || buffer.atomicBatch()) {
+                    splitAndFlush(buffer, op, tasks, from, to);
+                } else {
+                    failRange(batch, failure, false);
+                }
+                return;
+            }
+            failRange(batch, failure, false);
+        }
+    }
+
+    private void splitAndFlush(TableBuffer buffer, WriteTask.Op op,
+            List<WriteTask> tasks, int from, int to) {
+        int middle = from + (to - from) / 2;
+        flushRange(buffer, op, tasks, from, middle);
+        flushRange(buffer, op, tasks, middle, to);
+    }
+
+    private void retryRange(TableBuffer buffer, List<WriteTask> tasks, Exception failure) {
+        List<WriteTask> retry = new ArrayList<>(tasks.size());
+        for (WriteTask task : tasks) {
+            task.incrementRetry();
+            if (task.retryCount() <= maxRetries) {
+                retry.add(task);
+                metrics.recordCount("asyncWrite.retry", task.entityName(), 1);
+            } else {
+                log.warn("[{}] Write still failing after {} retries, dropping: op={}, id={}",
+                        task.entityName(), maxRetries, task.op(), task.id(), failure);
+                notifyPermanentFailure(task, false);
+                queue.complete(1);
             }
         }
-        return false;
+        queue.requeue(buffer, retry);
     }
 
-    private void notifyFailureHandler(WriteTask task) {
+    private void failRange(List<WriteTask> tasks, Exception failure, boolean configuration) {
+        for (WriteTask task : tasks) {
+            if (configuration) {
+                log.error("[{}] Configuration error, dropping write: op={}, id={}",
+                        task.entityName(), task.op(), task.id(), failure);
+            } else {
+                log.warn("[{}] Non-retriable write failure, dropping: op={}, id={}",
+                        task.entityName(), task.op(), task.id(), failure);
+            }
+            notifyPermanentFailure(task, configuration);
+        }
+        queue.complete(tasks.size());
+    }
+
+    private void notifyPermanentFailure(WriteTask task, boolean configuration) {
         try {
             failureHandler.accept(task);
-        } catch (Exception handlerEx) {
+        } catch (Exception handlerFailure) {
             log.error("failureHandler threw exception: entity={}, op={}, id={}",
-                    task.entityName(), task.op(), task.id(), handlerEx);
-            metrics.recordError("asyncWrite.failureHandler", task.entityName(), handlerEx);
+                    task.entityName(), task.op(), task.id(), handlerFailure);
+            metrics.recordError("asyncWrite.failureHandler", task.entityName(), handlerFailure);
         }
+        metrics.recordCount(configuration
+                        ? "asyncWrite.misconfiguration"
+                        : "asyncWrite.permanentFailure",
+                task.entityName(), 1);
+    }
+
+    private static <T extends Throwable> boolean contains(Throwable failure, Class<T> type) {
+        for (Throwable current = failure; current != null; current = current.getCause()) {
+            if (type.isInstance(current)) {
+                return true;
+            }
+        }
+        return false;
     }
 
     public void flush() {
@@ -275,33 +324,43 @@ public class FlushScheduler implements Closeable {
         scheduler.shutdown();
         try {
             if (!scheduler.awaitTermination(10, TimeUnit.SECONDS)) {
-                log.warn("FlushScheduler timer did not terminate in time, forcing final flush");
+                log.warn("FlushScheduler timer did not terminate in time");
             }
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-            log.warn("Interrupted while waiting for FlushScheduler timer to terminate");
         }
 
         flushPendingOnClose();
-
-        worker.shutdown();
+        workers.shutdown();
         try {
-            if (!worker.awaitTermination(10, TimeUnit.SECONDS)) {
-                worker.shutdownNow();
+            if (!workers.awaitTermination(10, TimeUnit.SECONDS)) {
+                workers.shutdownNow();
             }
         } catch (InterruptedException e) {
-            worker.shutdownNow();
+            workers.shutdownNow();
             Thread.currentThread().interrupt();
         }
     }
 
     private void flushPendingOnClose() {
-        int attempts = Math.max(1, maxRetries);
-        for (int i = 0; i < attempts && !queue.isEmpty(); i++) {
+        int flushes = 0;
+        long deadline = System.nanoTime() + TimeUnit.SECONDS.toNanos(10);
+        while (!queue.isEmpty() && flushes < maxRetries + 1 && System.nanoTime() < deadline) {
+            if (queue.hasInFlight()) {
+                try {
+                    queue.awaitInFlight(1_000);
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    break;
+                }
+                continue;
+            }
             doFlush();
+            flushes++;
         }
         if (!queue.isEmpty()) {
-            log.warn("Async write queue still has {} task(s) after final flush attempts", queue.size());
+            log.warn("Async write queue still has {} queued or in-flight task(s) after final flush attempts",
+                    queue.size());
         }
     }
 }
